--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h2>HTML Images</h2>
     <p>HTML images are defined with the img tag:</p>
-    <img src="https://images.pexels.com/photos/15447422/pexels-photo-15447422.jpeg" alt="City at Sunset">
+    <img src="https://images.pexels.com/photos/15447422/pexels-photo-15447422.jpeg" alt="City at Sunset" height="120" width="46">
 </body>
 </html>
