--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   background-color: yellow;
   padding: 5px;
 }
+<!--max--!>
+#div2 {
+  background-color: orange;
+  height: 100px;
+  width: max(50%, 300px);
+}
+
+        
 </style>
 </head>
 <body>
@@ -26,6 +34,16 @@
 ​
 <div id="div1">Some text...</div>
 ​
+
+
+<h2>The max() Function</h2>
+​
+<p>Create a div that stretches across the window, with a 50px gap between both sides of the div and the edges of the window:</p>
+​
+<div id="div2">Some text...</div>
+
+
+
     
 </body>
 </html>
