--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 #div1 {
   position: absolute;
   left: 50px;
-  width: calc(100% - 100px);
+  width: calc(100% -90px);
   border: 1px solid black;
   background-color: yellow;
   padding: 5px;
@@ -34,6 +34,10 @@
 ​
 <div id="div1">Some text...</div>
 ​
+
+    
+
+
 
 
 <h2>The max() Function</h2>
