--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   background-color: yellow;
   padding: 5px;
 }
-<!--max--!>
+</style>
+    
+<style>
 #div2 {
   background-color: orange;
   height: 100px;
