--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>HTML images are defined with the img tag:</p>
     <img src="https://images.pexels.com/photos/15447422/pexels-photo-15447422.jpeg" alt="City at Sunset" height="120" width="86">
 
-   <p><a href= "f" > Math Css</a></a> </p> 
+   <p><a href= "maths.html" > Math Css</a></a> </p> 
     <h1>The calc() Function</h1>
 ​
 <p>Create a div that stretches across the window, with a 50px gap between both sides of the div and the edges of the window:</p>
