--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <img src="https://images.pexels.com/photos/15447422/pexels-photo-15447422.jpeg" alt="City at Sunset" height="120" width="86">
 
    <p><a href= "maths.html" > Math Code in relation to sizing</a></a> </p> 
+
+    <p><a href= "about.html" > Math Code in relation to sizing</a></a> </p> 
+    
     
 ​
 
