--- a/About.html
+++ b/About.html
@@ -1,1 +1,11 @@
+<span> Christine Nyakio Mwangi</span>
+<img src="" alt="">
+
+
+<p>Junior Software Developer</p>
+<p> Currently interested in intersecting technology amd entrepreneurship</p>
+
+
+
+
 
