--- a/services.html
+++ b/services.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Services</title>
+
+  
+</head>
+<body>
+
+  <section>
+
+    <h2> What I do</h2>
+    <h3>Frontend</h3>
+    <p> Javascript, Angular, Bootstrap</p>
+  </section>
+   
+    
+​
+
+    
+
+
+
+
+
+​</body>
+</html>
 
