--- a/maths.html
+++ b/maths.html
@@ -8,6 +8,18 @@
   width: max(50%, 300px);
 }
 </style>
+
+  
+<style>
+  #div2 {
+  background-color: yellow;
+  height: 100px;
+  width: max(50%, 300px);
+
+
+  
+</style>
+
 </head>
 <body>
 ​
@@ -18,6 +30,21 @@
 <div id="div1">Some text...</div>
 ​
 <p>Resize the browser window to see the effect.</p>
+  <br> 
+
+  <h1>The max() Function</h1>
+​
+<p>Use max() to set the width of #div1 to whichever value is largest, 50% or 300px:</p>
+​
+<div id="div2">Some text...</div>
+​
+<p>Resize the browser window to see the effect.</p>
+​
+
+
+
+
+  
 ​
 </body>
 </html>
