--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <p>HTML images are defined with the img tag:</p>
     <img src="https://images.pexels.com/photos/15447422/pexels-photo-15447422.jpeg" alt="City at Sunset" height="120" width="86">
 
-   <p><a href= "maths.html" > Math Code in relation to sizing</a></a> </p> 
+   <p><a href= "maths.html" > Math Code in relation to sizing</a> </p> 
 
-    <p><a href= "about.html" > Math Code in relation to sizing</a></a> </p> 
+    <p><a href= "about.html" > Math Code in relation to sizing</a>/p> 
+    <p><a href= "services.html" > Math Code in relation to sizing</a>/p>    
     
     
 ​
