--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   
 </head>
 <body>
+
+    <p><a href= "About.html" > Math Code in relation to sizing</a>/p> 
+    <p><a href= "services.html" > Math Code in relation to sizing</a>/p>  
+    <p><a href="table.html"> Creation of tables using html</p>
     <h2>HTML Images</h2>
     <p>HTML images are defined with the img tag:</p>
     <img src="https://images.pexels.com/photos/15447422/pexels-photo-15447422.jpeg" alt="City at Sunset" height="120" width="86">
