--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <p><a href= "About.html" > Math Code in relation to sizing</a>/p> 
     <p><a href= "services.html" > Math Code in relation to sizing</a>/p>  
+     <p><a href= "maths.html" > Math Code in relation to sizing</a>/p> 
     <p><a href="table.html"> Creation of tables using html</p>
     <h2>HTML Images</h2>
     <p>HTML images are defined with the img tag:</p>
