--- a/table.html
+++ b/table.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <table>
+        <caption> THE CASTLES</caption>
 
         <tr>
 
 
             <td>
-                <img src="https://images.pexels.com/photos/1535049/pexels-photo-1535049.jpeg" alt="Castle"/>
+                <img src="https://images.pexels.com/photos/1535049/pexels-photo-1535049.jpeg" alt="Castle" height="120" width="45" />
+                
 
             </td>
             <td>
@@ -27,12 +29,12 @@
                 <table>
 
                     <tr>
-                        <td><img src="" /></td>
+                        <td><img src="https://images.pexels.com/photos/1334441/pexels-photo-1334441.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" height="50" width="80"/></td>
                         <td><img src="" /></td>
                     </tr>
 
                     <tr>
-                        <td><img src="" /></td>
+                        <td><img src="https://images.pexels.com/photos/64287/stirling-castle-scotland-stirling-castle-64287.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" height="70" width="60" /></td>
                         <td><img src="" /></td>   
                     </tr>
                 </table>
