--- a/tabletags.html
+++ b/tabletags.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Additional table tags
 
+    </title>
+</head>
+<body>
+    <table>
+        <caption> 19th Century French Paintings</caption>
+        <col class="artistName"/>
+        <colgroup id="`paintingColumns">
+        <col/>
+    <col/>
+</colgroup>
+ <thead>
+    <tr>
+        <th>Title</th>
+        <th>Title</th>
+
+    </tr>
+ </thead>
+
+ <tfoot>
+
+    <tr>
+        <td colspan="2" >Total number of Paintings</td>
+        <td  >2</td>
+    </tr>
+ </tfoot>
+
+ <tbody>
+    <tr>
+        <td>The elf of Marat</td>
+        <td>Louis David</td>
+        <td>1973</td>
+    </tr>
+ </tbody>
+
+
+
+    </table>
+    
+</body>
+</html>
