--- a/tabletags.html
+++ b/tabletags.html
@@ -6,9 +6,19 @@
     <title>Additional table tags
 
     </title>
+    <style>
+        table{
+            border:solid 1pt black;
+        }
+        td{
+            border: solid 1pt black;
+        }
+        
+    </style>
 </head>
 <body>
     <table>
+        
         <caption> 19th Century French Paintings</caption>
         <col class="artistName"/>
         <colgroup id="`paintingColumns">
