--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                   <a href="table.html" class="nav__link">Tables HTML</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#about" class="nav__link">About</a>
+                  <a href="businessform.html" class="nav__link">Business Form</a>
                 </li>
                
                 <li class="nav__item">
-                  <a href="#contact" class="nav__link">Contact</a>
+                  <a href="services.html" class="nav__link">Contact</a>
                 </li>
               </ul>
             </nav>
