--- a/businessform.html
+++ b/businessform.html
@@ -52,22 +52,36 @@
             <p>Select the art piece you want to purchase</p>
             <input type="radio" id="malindi" name="art_piece" value="malindi art">
             <label for="malindi">Malindi Art - ksh 45,000</label>
+            <label for="quantity">Quantity(between only 1 and 6): </label>
+            <input type="number" id="quantity" min="1" max="6">
+            <input type="number" id="quantity" value="Submit">
             <br>
 
            
             <input type="radio" id="kilifi" name="art_piece" value="kilifi art">
             <label for="kilifi">kilifi Art - ksh-48,000</label>
+            <label for="quantity">Quantity(between only 1 and 6): </label>
+            <input type="number" id="quantity" min="1" max="6">
+            <input type="number" id="quantity" value="Submit">
 
             <br>
 
            
             <input type="radio" id="lamu" name="art_piece" value="lamu art">
             <label for="lamu">Lamu Art - ksh 82,000</label>
+
+            <label for="quantity">Quantity(between only 1 and 6): </label>
+            <input type="number" id="quantity" min="1" max="6">
+            <input type="number" id="quantity" value="Submit">
             <br>
 
 
             <input type="radio" id="watamu" name="art_piece" value="watamu art">
             <label for="watamu">Watamu Art - ksh 59,000</label>
+
+            <label for="quantity">Quantity(between only 1 and 6): </label>
+            <input type="number" id="quantity" min="1" max="6">
+            <input type="number" id="quantity" value="Submit">
 
             <br>
 
