--- a/businessform.html
+++ b/businessform.html
@@ -62,7 +62,7 @@
             <label for="kilifi">kilifi Art - ksh-48,000</label>
             <label for="quantity">Quantity(between only 1 and 6): </label>
             <input type="number" id="quantity" min="1" max="6">
-            <input type="number" id="quantity" value="Submit">
+            <input type="submit" id="submit" value="Submit">
 
             <br>
 
@@ -72,7 +72,7 @@
 
             <label for="quantity">Quantity(between only 1 and 6): </label>
             <input type="number" id="quantity" min="1" max="6">
-            <input type="number" id="quantity" value="Submit">
+            <input type="submit" id="submit" value="Submit">
             <br>
 
 
@@ -81,7 +81,7 @@
 
             <label for="quantity">Quantity(between only 1 and 6): </label>
             <input type="number" id="quantity" min="1" max="6">
-            <input type="number" id="quantity" value="Submit">
+            <input type="submit" id="submit" value="Submit">
 
             <br>
 
