--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
                 <li class="nav__item">
                   <a href="businessform.html" class="nav__link">Business Form</a>
                 </li>
+
+                   <li class="nav__item">
+                  <a href="usiuadvanced.html" class="nav__link">USIU Advanced Web form</a>
+                </li>
                
                 <li class="nav__item">
-                  <a href="services.html" class="nav__link">Contact</a>
+                  <a href="services.html" class="nav__link">Services</a>
                 </li>
               </ul>
             </nav>
