--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Designs</title>
+    <style>
+        .nav{
+            background-color: #333;
+            padding: 10px;
+        }
+
+        
+    .nav__link:hover {
+        background-color: #575757; 
+        border-radius: 5px; 
+    }
+</style>
 </head>
 <body>
       <!-- Navigation Bar -->
