--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
             background-color: #333;
             padding: 10px;
         }
+        .nav__items{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        .nav_item{
+            margin-right: 20px;
+        }
+
+        
 
         
     .nav__link:hover {
