--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                    <li class="nav__item">
                   <a href="usiuadvanced.html" class="nav__link">USIU Advanced Web form</a>
                 </li>
+
+                     <li class="nav__item">
+                  <a href="time.html" class="nav__link">Time project using JS</a>
+                </li>
                
                 <li class="nav__item">
                   <a href="services.html" class="nav__link">Services</a>
