--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                      <li class="nav__item">
                   <a href="time.html" class="nav__link">Time project using JS</a>
                 </li>
+
+
+                   <li class="nav__item">
+                  <a href="paragraph.html" class="nav__link">Time project using JS</a>
+                </li>
+
+                  
                
                 <li class="nav__item">
                   <a href="services.html" class="nav__link">Services</a>
