--- a/bodyjs.html
+++ b/bodyjs.html
@@ -10,6 +10,8 @@
 
 <p id="demo">A Paragraph.</p>
 
+    <button type="button" onclick="myFunction()">Try it</button>
+
 <script>
     function myFunction() {
       document.getElementById("demo").innerHTML = "Paragraph changed.";
