--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
                   <a href="bodyjs.html" class="nav__link"> Inline JS(body)</a>
                 </li>
 
+                   <li class="nav__item">
+                  <a href="external.html" class="nav__link"> JS stored externlly</a>
+                </li>
+
                   
 
                   
