--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </li>
 
                    <li class="nav__item">
-                  <a href="external.html" class="nav__link"> JS stored externlly</a>
+                  <a href="externaljs.html" class="nav__link"> JS stored externlly</a>
                 </li>
 
                   
