--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
                   <a href="externaljs.html" class="nav__link"> JS stored externlly</a>
                 </li>
 
+                   <li class="nav__item">
+                  <a href="externaljsurl.html" class="nav__link"> JS stored externlly in a url</a>
+                </li>
+
                   
 
                   
