--- a/About.html
+++ b/About.html
@@ -1,9 +1,9 @@
 <span> Christine Nyakio Mwangi</span>
-<img src="" alt="">
+
+<a href="JavaScript:OpenWindow();"> more info</a>
+  <input type="button" onclick="alert('Are you sure');"
 
 
-<p>Junior Software Developer</p>
-<p> Currently interested in intersecting technology amd entrepreneurship</p>
 
 
 
