--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
-<span> Christine Nyakio Mwangi</span>
+<span>Christine Nyakio Mwangi</span>
+<a href="JavaScript:OpenWindow();">more info</a>
+<input type="button" onclick="alert('Are you sure');" />
 
-<a href="JavaScript:OpenWindow();"> more info</a>
-  <input type="button" onclick="alert('Are you sure');"
 
 
 
