--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                   <a href="externaljsurl.html" class="nav__link"> JS stored externlly in a url</a>
                 </li>
 
+                    <li class="nav__item">
+                  <a href="jssyntax.html" class="nav__link"> JS syntax</a>
+                </li>
+
                   
 
                   
